--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "tw-animate-css": "^1.4.0",
     "vaul": "^1.1.2",
     "vite-plugin-pwa": "^0.21.1",
+    "vite-plugin-image-optimizer": "^1.1.8",
     "wouter": "^3.3.5",
     "ws": "^8.18.0",
     "zod": "^3.25.76",
