--- a/package.json
+++ b/package.json
@@ -77,6 +77,9 @@
     "vaul": "^1.1.2",
     "vite-plugin-pwa": "^0.21.1",
     "vite-plugin-image-optimizer": "^1.1.8",
+    "@tailwindcss/postcss": "^4.0.0",
+    "sharp": "^0.33.5",
+    "tailwindcss": "^4.0.0",
     "wouter": "^3.3.5",
     "ws": "^8.18.0",
     "zod": "^3.25.76",
