Volgende poging paths protocols.

--- a/vercel.json
+++ b/vercel.json
@@ -17,6 +17,10 @@
       "destination": "server/index.ts"
     },
     {
+      "source": "/protocols/(.*)",
+      "destination": "/index.html"
+    },
+    {
       "source": "/(.*)",
       "destination": "/index.html"
     }
