--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,9 @@ jobs:
           cache: 'npm'
 
       - name: Install dependencies
-        run: npm install
+        run: |
+          npm install --no-package-lock
+          npm install eslint-plugin-react-refresh@latest --no-save
 
       - name: Type Check (TypeScript)
         run: npm run check
