--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "@tailwindcss/typography": "^0.5.10",
     "react-resizable-panels": "^2.1.9",
     "remark-gfm": "^4.0.0",
+    "remark-breaks": "^4.0.0",
     "recharts": "^2.15.4",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
