--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,13 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "server/index.ts",
-      "use": "@vercel/node"
-    }
-  ],
   "rewrites": [
     {
       "source": "/api/(.*)",
-      "destination": "/server/index.ts"
+      "destination": "/api/index.js"
     },
     {
       "source": "/(.*)",
-      "destination": "/server/index.ts"
+      "destination": "/index.html"
     }
   ]
 }
