--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REDIS_URL=redis://127.0.0.1:6379
+REDIS_URL="redis://default:axj8YFyR61zrJ23zFZEDK6dpwi5l02hL@redis-18417.crce198.eu-central-1-3.ec2.cloud.redislabs.com:18417"
 VITE_APP_PIN=3044
